<resources>
    <string name="app_name">Daily Food</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="sub_btn_iniciar">No tienes una cuenta?</string>
    <string name="text_registrate">Registrate</string>
    <string name="textBienvenida">Bienvenido a Daily Food</string>
    <string name="textQuePreparar">¿Qué preparará hoy?</string>
    <string name="textLoMasPopular">Lo más popular</string>
    <string name="textDescripcionPopular">Esta receta es la que tiene mayor número de "me gusta" actualmente</string>
    <string name="textQueHacer">¿Qué desea hacer?</string>
    <string name="btnIngresarAlimento">Ingresar alimento</string>
    <string name="btnCrearReceta">Crear receta</string>
    <string name="textRecetas">Recetas</string>
    <string name="textFiltrarPor">Filtrar por:</string>
    <string name="textMiSeleccion">Mi selección</string>
    <string name="textMasPopular">Más popular</string>
    <string name="textOpciones">Opciones</string>
    <string name="btnPreparacionesMeGustan">Preparaciones que me gustan</string>
    <string name="btnMisRecetas">Mis recetas</string>
    <string name="textCambiarContraseña">Cambiar contraseña</string>
    <string name="textCerrarSesion">Cerrar sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="textTengoCuenta">Ya tengo una cuenta</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="textOlvidoContrasena">Olvidó su contraseña?</string>
    <string name="textEmail">Correo Electrónico</string>
    <string name="textPassword">Contraseña</string>
    <string name="textCrearPassword">Cree una Contraseña</string>
    <string name="textQueTengo">¿Qué tengo?</string>
    <string name="textProteinas">Proteínas</string>
    <string name="textCarbohidratos">Carbohidratos</string>
    <string name="textGrasas">Grasas</string>
    <string name="textBebidas">Bebidas y Lácteos</string>
    <string name="textFrutas">Frutas</string>
    <string name="textVerduras">Verduras</string>
    <string name="btnGuardar">Guardar</string>
    <string name="textCrearReceta">Crear receta</string>
    <string name="textNombreReceta">Nombre de la receta</string>
    <string name="textIngredientes">Ingredientes</string>
    <string name="textSeleccioneTipo">Seleccione tipo</string>
    <string name="textPreparacion">Preparación</string>
    <string name="textEscribaProceso">Escriba el proceso de preparación</string>
    <string name="textCalorias">Calorías</string>
    <string name="textReceta">Receta</string>
    <string name="textCoincidencia">Coincidencia ingredientes</string>
    <string name="textPopularidad">Popularidad</string>
    <string name="textPlatillosFavoritos">Platillos favoritos</string>
    <string name="textMisRecetas">Mis recetas</string>
    <string name="textMisIngredientes">Mis Ingredientes</string>
    <string name="btnTomarFoto">Tomar foto</string>
    <string name="textViewSeleccion">Ingredientes a utilizar</string>
    <string name="textIngredientesReceta">Ingrese los ingredientes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>