<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recetas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/texto_primario"
        app:layout_constraintBottom_toBottomOf="@+id/bienvenida"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida">

        <TextView
            android:id="@+id/recetas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textRecetas"
            android:textColor="@color/texto_icono"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filtrarPor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textFiltrarPor"
            android:textColor="@color/texto_icono"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recetas" />

        <Button
            android:id="@+id/miSeleccion"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/primario"
            android:text="@string/textMiSeleccion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filtrarPor" />

        <Button
            android:id="@+id/masPopular"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_marginTop="103dp"
            android:backgroundTint="@color/primario"
            android:text="@string/textMasPopular"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/miSeleccion" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>