<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/texto_primario"
        app:layout_constraintBottom_toBottomOf="@+id/bienvenida"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida">

        <TextView
            android:id="@+id/opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textOpciones"
            android:textColor="@color/texto_icono"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/queHacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textQueHacer"
            android:textColor="@color/texto_icono"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opciones" />

        <Button
            android:id="@+id/btnIngresarAlimento"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/primario"
            android:text="@string/btnIngresarAlimento"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/queHacer" />

        <Button
            android:id="@+id/btnCrearReceta"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_marginTop="103dp"
            android:backgroundTint="@color/primario"
            android:text="@string/btnCrearReceta"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIngresarAlimento" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>